@@ -237,6 +237,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
   * Display link to full log again (closes: #507506)
   * Add Last-Modified: header support to mbox download (closes: #456786)
   * Add Date headers if missing (closes: #458757)
+  * Indiciate what machine has built webpages (closes: #507022)
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
